--- a/sabyltimetracker/templates/account/login.html
+++ b/sabyltimetracker/templates/account/login.html
@@ -6,25 +6,25 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block content %}
+{% block inner %}
   <div class="sufee-login d-flex align-content-center flex-wrap">
-      <div class="container">
-          <div class="login-content">
-              <div class="login-logo">
-                <img class="align-content" src="{% static 'images/logo.png' %}" alt="">
-              </div>
-              <div class="login-form">
-                  <form class="login" method="POST" action="{% url 'account_login' %}">
-                      {% csrf_token %}
-                      {{ form|crispy }}
-                      {% if redirect_field_value %}
-                          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                      {% endif %}
-                      {#  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>#}
-                    <button class="btn btn-success btn-flat m-b-30 m-t-30" type="submit">{% trans "Sign In" %}</button>
-                  </form>
-              </div>
-          </div>
+    <div class="container">
+      <div class="login-content">
+        <div class="login-logo">
+          <img class="align-content" src="{% static 'images/logo.png' %}" alt="">
+        </div>
+        <div class="login-form">
+          <form class="login" method="POST" action="{% url 'account_login' %}">
+            {% csrf_token %}
+            {{ form|crispy }}
+            {% if redirect_field_value %}
+              <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+            {% endif %}
+            {#  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>#}
+            <button class="btn btn-success btn-flat m-b-30 m-t-30" type="submit">{% trans "Sign In" %}</button>
+          </form>
+        </div>
       </div>
+    </div>
   </div>
-{% endblock content %}
+{% endblock inner %}
