--- a/sabyltimetracker/templates/account/logout.html
+++ b/sabyltimetracker/templates/account/logout.html
@@ -4,27 +4,22 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
+{% block inner %}
   <div class="sufee-login d-flex align-content-center flex-wrap">
-
-
-
-
-
-      <div class="container">
-          <div class="login-content">
-            <div class="login-form">
-              <h1>{% trans "Sign Out" %}</h1>
-              <p>{% trans 'Are you sure you want to sign out?' %}</p>
-              <form method="post" action="{% url 'account_logout' %}">
-                {% csrf_token %}
-                {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-                {% endif %}
-                <button class="btn btn-danger" type="submit">{% trans 'Sign Out' %}</button>
-              </form>
-            </div>
-          </div>
+    <div class="container">
+      <div class="login-content">
+        <div class="login-form">
+          <h1>{% trans "Sign Out" %}</h1>
+          <p>{% trans 'Are you sure you want to sign out?' %}</p>
+          <form method="post" action="{% url 'account_logout' %}">
+            {% csrf_token %}
+            {% if redirect_field_value %}
+              <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+            {% endif %}
+            <button class="btn btn-danger" type="submit">{% trans 'Sign Out' %}</button>
+          </form>
+        </div>
       </div>
+    </div>
   </div>
-{% endblock content %}
+{% endblock inner %}
