--- a/sabyltimetracker/templates/base.html
+++ b/sabyltimetracker/templates/base.html
@@ -69,7 +69,7 @@
             <a href="{% url 'home' %}"> <i class="menu-icon fa fa-dashboard"></i>{% trans 'Dashboard' %}</a>
           </li>
           <h3 class="menu-title">{% trans 'Menu' %}</h3><!-- /.menu-title -->
-          <li><a href="{% url 'tracker:past_days' request.user.username %}"><i class="menu-icon fa fa-calendar"></i>{% trans 'Edit Past Days' %}</a></li>
+          <li><a href="{% url 'tracker:past_days' request.user.username %}"><i class="menu-icon fa fa-calendar"></i>{% trans 'Past Days' %}</a></li>
           {##}
           {#                <li class="menu-item-has-children dropdown">#}
           {#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-laptop"></i>Components</a>#}
@@ -290,7 +290,7 @@
 
 {% block javascript %}
   {#      <script src="assets/js/lib/chart-js/Chart.bundle.js"></script>#}
-  {#      <script src="assets/js/dashboard.js"></script>#}
+  {#      <script src="assets/js/clock.js"></script>#}
   {#      <script src="assets/js/widgets.js"></script>#}
   {#      <script src="assets/js/lib/vector-map/jquery.vmap.js"></script>#}
   {#      <script src="assets/js/lib/vector-map/jquery.vmap.min.js"></script>#}
