--- a/sabyltimetracker/templates/tracker/past_days.html
+++ b/sabyltimetracker/templates/tracker/past_days.html
@@ -29,6 +29,7 @@
 {%  endblock breadcrumbs %}
 
 {% block content %}
+<form method="post" action="{% url 'tracker:api_daily_report' request.user.username %}">{% csrf_token %}
   <div class="row">
     <div class="col-xs-6 col-lg-12">
       <div class="card">
@@ -40,9 +41,16 @@
           <div class="form-group">
             <select id="day" name="date" class="form-control">
               <option value="">{% trans '-Select a workday-' %}</option>
-              {% for workday in workdays %}
-                <option value="{% url 'tracker:past_days_edit' username=request.user.username date=workday.date|date:'Y-m-d' %}">{{ workday.date }} {% trans 'at' %} {{ workday.building }}</option>
-              {% endfor %}
+              <optgroup label="{% trans 'Editable' %}">
+                {% for workday in editable_workdays %}
+                  <option data-url="{% url 'tracker:past_days_edit' username=request.user.username date=workday.date|date:'Y-m-d' %}" value="{{ workday.date|date:'Y-m-d' }}">{{ workday.date }} {% trans 'at' %} {{ workday.building }}</option>
+                {% endfor %}
+              </optgroup>
+              <optgroup label="{% trans 'Non-editable' %}">
+                {% for workday in non_editable_workdays %}
+                  <option value="{{ workday.date|date:'Y-m-d' }}">{{ workday.date }} {% trans 'at' %} {{ workday.building }}</option>
+                {% endfor %}
+              </optgroup>
             </select>
           </div>
         </div>
@@ -54,11 +62,17 @@
     <div class="col-xs-6 col-lg-12">
       <div class="card">
         <div class="card-body card-block">
-          <button id="next" class="btn btn-lg btn-block btn-primary" disabled>{% trans "Next" %}</button>
+            <div class="col-sm-6 col-12">
+              <button id="edit" class="btn btn-lg btn-block btn-danger" disabled>{% trans "Edit Day" %}</button>
+            </div>
+            <div class="col-sm-6 col-12">
+              <button id="report" class="btn btn-lg btn-block btn-primary" disabled type="submit">{% trans "Download Report" %}</button>
+            </div>
         </div>
       </div>
     </div>
   </div>
+</form>
 {% endblock content%}
 
 {% block javascript %}
