--- a/sabyltimetracker/static/css/style.css
+++ b/sabyltimetracker/static/css/style.css
@@ -2253,3 +2253,8 @@ input[type='checkbox'].checkbox-lg:checked {
     /*background: rgba(83,164,61,1);*/
     background-image: url('../images/check.png');
 }
+
+.card-danger {
+  border-color: #dc3545;
+}
+
