--- a/sabyltimetracker/templates/tracker/dashboard.html
+++ b/sabyltimetracker/templates/tracker/dashboard.html
@@ -74,20 +74,27 @@
   </div>
 
   <div class="col-12">
-    <div class="card">
+    <div class="card {% if is_old_workday %}card-danger{% endif %}">
       <div class="card-body">
         <div class="big-clock">
-          <div class="hero-circle">
-            <div class="hero-face">
-              <div id="hour" class="hero-hour"></div>
-              <div id="minute" class="hero-minute"></div>
-              <div id="second" class="hero-second"></div>
+          {% if is_old_workday %}
+            <p>{% trans 'This is an old unfinished workday.' %}</p>
+            <div class="clock-time col-md-12">
+              <p class="date-static">{{ workday.date }}</p>
             </div>
-          </div>
-          <div id="clock" class="clock-time col-md-12">
-            <p class="date">loading ...</p>
-            <p class="time"></p>
-          </div>
+          {% else %}
+            <div class="hero-circle">
+              <div class="hero-face">
+                <div id="hour" class="hero-hour"></div>
+                <div id="minute" class="hero-minute"></div>
+                <div id="second" class="hero-second"></div>
+              </div>
+            </div>
+            <div id="clock" class="clock-time col-md-12">
+              <p class="date">loading ...</p>
+              <p class="time"></p>
+            </div>
+          {% endif %}
         </div>
       </div>
     </div>
