--- a/sabyltimetracker/templates/tracker/day_review.html
+++ b/sabyltimetracker/templates/tracker/day_review.html
@@ -30,6 +30,21 @@
 {%  endblock breadcrumbs %}
 
 {% block content %}
+  {% if is_old_workday %}
+    <div class="row">
+      <div class="col-xs-6 col-lg-12">
+        <div class="card card-danger">
+          <div class="card-header">
+            <strong>{% trans "Old workday" %}</strong>
+          </div>
+          <div class="card-body card-block">
+            <p>{{ workday.date }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  {% endif %}
+
   <div class="row">
     <div class="col-xs-6 col-lg-12">
       <div class="card">
