--- a/sabyltimetracker/templates/tracker/dashboard.html
+++ b/sabyltimetracker/templates/tracker/dashboard.html
@@ -36,7 +36,7 @@
         <div class="stat-widget-one">
           <div class="stat-icon dib"><i class="ti-clipboard text-success border-success"></i></div>
           <div class="stat-content dib">
-            <div class="stat-text">Workers with logs</div>
+            <div class="stat-text">{%  trans 'Workers with logs' %}</div>
             <div class="stat-digit">{{ workers_ratio }}%</div>
           </div>
         </div>
